# softvoice-wrapper

./: CMakeLists.txt  LICENSE  README.md
include/: resource.h  softvoice_wrapper.h
nvda_driver/: .gitignore  build.cmd  build.py  manifest.ini  softvoice_host32.spec
nvda_driver/doc/en/: readme.html  readme.md
nvda_driver/doc/ru/: readme.html  readme.md
nvda_driver/locale/ru/: manifest.ini
nvda_driver/synthDrivers/: _host_softvoice32.py  _ipc.py  _softvoice.py  sv.py
src/: softvoice-say.cpp  softvoice-say.rc  softvoice_wrapper.cpp  sv.py
